# curves-intersection

./: README.md
newyear_interval/: CMakeLists.txt
newyear_interval/include/: Algorithm.h  AlgorithmBoundingBoxWolframScriptEngine.h  ExToMat.h  Global.h  HandleConnectedRegion.h  IntelligentNewton.h  IntervalMatrix.h  Kernel.h  KernelBezier.h  KernelCovered.h  KernelMinSize.h  KernelResultant.h  MatToBezier.h  MatToBezierFloatingPoint.h  MatToEx.h  MatToString.h  MatToStringCFormat.h  MatToStringPythonFormat.h  MaxValueOfPoly.h  MyWolframEngine.h  NewKantorovich.h  Node.h  NodeBoundingBox.h  Point.h  PowerCoffi.h  Region.h  SoluContainer.h  Subdivision.h  SubdivisionByPara.h  UnivariateSubdivision.h  VectorSort.h
newyear_interval/src/: Algorithm.cpp  AlgorithmBoundingBoxWolframScriptEngine.cpp  ExToMat.cpp  Global.cpp  HandleConnectedRegion.cpp  IntelligentNewton.cpp  IntervalMatrix.cpp  Kernel.cpp  KernelBezier.cpp  KernelCovered.cpp  KernelMinSize.cpp  KernelResultant.cpp  MatToBezier.cpp  MatToBezierFloatingPoint.cpp  MatToEx.cpp  MatToString.cpp  MatToStringCFormat.cpp  MatToStringPythonFormat.cpp  MaxValueOfPoly.cpp  MyWolframEngine.cpp  NewKantorovich.cpp  Node.cpp  NodeBoundingBox.cpp  Point.cpp  PowerCoffi.cpp  Region.cpp  SoluContainer.cpp  Subdivision.cpp  SubdivisionByPara.cpp  UnivariateSubdivision.cpp  main.cpp
